agregar nodo. hacer que se muestre las dos paginas en una sola imagen porque se ve mejor

--- a/flip.html
+++ b/flip.html
@@ -10,8 +10,8 @@
   <svg width="800" height="600"></svg>
 
   <div id="book">
-    <img id="leftPage" src="" alt="Left Page">
-    <img id="rightPage" src="" alt="Right Page">
+    <img id="Page" src="" alt="Page">
+    <img id="nodos" src="nodos.png" alt="Page">
     <button id="prevBtn">←</button>
     <button id="nextBtn">→</button>
   </div>
